# Driver-Component-for-Ahola-Project

./: Database Model.md  README.md  build_backend.sh  docker-compose.yml  run_database.ps1  run_database.sh  setup_db.sh
backend/: Cargo.toml  build.rs
backend/.sqlx/: query-030488f9d0c719a9a7ec7438709ca1c064ad0ea2cfe999b41942366e59687bfb.json  query-17691e70f0bf395b4863802e9681163c5131a3ea842cf54a21b3735dd1c4019a.json  query-1d948b4144fba44871bf081ae470ba71918bf033d2605a3f00b572adae638ab5.json  query-2d612b722bbb5a66b2ab69df99e23e85f91f9b90c3aba399e5a94c056ab521a9.json  query-37775f6187934345dd061b219ddc862dbca056b99b5a78de3e09e11925583b4e.json  query-3dd4c543ba4794fbdcc8394b876d2f0ee22b3840a974a9436405da0114381f90.json  query-408b6f7c72f0ded950cd4678b00c564513e2d34ea12e98c45971afda4b8137b0.json  query-560ee06c3851045612107bfb94aaec8862ab62eca0b8af5e5acc13db4dde4cc7.json  query-58cbb49744eea75feb8047646544c0448f4bb1e5da6afe3b2c4a432b8559ce9a.json  query-618463f8f65370a07f9a2f176532348217cfa8e3ae3186dd8ee5dbf65e43ff1f.json  query-64a6e2d26e02c1df2a36cb482332892b1d354703f8ad1a3ba1d6d10a5927f95f.json  query-69ef128fef8fc75556abf485900aa007ecb686babf9aafac538aba179a42258f.json  query-6f35881a872423a6b4fb048fa0ceeee72ae97cff0c006b052b099c0f6f65dd70.json  query-758703a8371a6162b4d14d41b7423288f6c97f7ce4c4660bdd5061ad5d34be21.json  query-759644e1725d365b064c43bcb79287b3cf4fb69d033e57a4ed2f977e2826963c.json  query-77c0787715685adf9beddcc8a24370ff2e7d6b6f9afeb7ec3540fcc50b7cc317.json  query-92994e6a4303c7ebdedebce10706fa5c5f3c9a05796db95a317e5cd0b1649509.json  (+16 more)
database/: init.sh  (+8 more)
(+39 files in other folders)
