[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
tokio = { version = "^1.33.0", features = ["rt-multi-thread", "macros"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros"] }
tonic = "0.10.2"
prost = "0.12.1"
tracing = "0.1.40"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
dashmap = "5.5.3"
uuid = { version = "1.5.0", features = ["v4"] }
tracing-subscriber = "0.3.17"
thiserror = "1.0.50"
 
[build-dependencies]
tonic-build = "0.9"
